# website-metadata

./: README.md  pyproject.toml
src/: cli.py  decorators.py  main.py
src/website_metadata/: cli.py  main.py
tests/: google.com.html
